project('thread', 'c',
  version:        '3.0.5',
  meson_version:  '>=1.3.0',
)
# Hand-written meson skeleton for the Thread Tcl extension
# (https://core.tcl-lang.org/thread).  Upstream uses TEA (autoconf +
# Makefile.in); this skeleton just compiles the listed PKG_SOURCES
# from configure.ac under stubs.  Optional GDBM / LMDB / AOLserver
# integration is intentionally omitted — the Thread extension builds
# fine without them and aws-tcl doesn't use those features.

cc      = meson.get_compiler('c')
fs      = import('fs')
tcl_dep = dependency('tcl')

tclver_full  = tcl_dep.version()
tclver_parts = tclver_full.split('.')
tclver_major = tclver_parts[0]

# TEA's PKG_LIB_FILE9 convention for Tcl 9: lib<tcl9><name><version>.so
# Tcl 8 uses lib<name><version>.so without the prefix.  We only target
# Tcl 9 here (the tcl wrap is Tcl 9); hard-coding the prefix keeps the
# pkgIndex.tcl substitution simple.
lib_basename9 = 'tcl' + tclver_major + 'thread' + meson.project_version()
lib_basename8 = 'thread' + meson.project_version()

generic_sources = files(
  'generic/threadNs.c',
  'generic/threadCmd.c',
  'generic/threadSvCmd.c',
  'generic/threadSpCmd.c',
  'generic/threadPoolCmd.c',
  'generic/psGdbm.c',
  'generic/psLmdb.c',
  'generic/threadSvListCmd.c',
  'generic/threadSvKeylistCmd.c',
  'generic/tclXkeylist.c',
)

platform_sources = []
if host_machine.system() != 'windows'
  platform_sources += files('unix/threadUnix.c')
endif

c_args = [
  '-DUSE_TCL_STUBS=1',
  '-DBUILD_thread',
  '-DPACKAGE_NAME="' + meson.project_name() + '"',
  '-DPACKAGE_VERSION="' + meson.project_version() + '"',
  '-DMODULE_SCOPE=extern',
]

# Stubs: subproject-fallback tcl bundles tclstub into tcl_dep itself,
# while a system-resolved tcl_dep advertises its libdir for find_library.
deps = [tcl_dep.partial_dependency(compile_args: true, includes: true)]
if tcl_dep.type_name() == 'internal'
  deps += tcl_dep.partial_dependency(links: true)
else
  deps += cc.find_library('tclstub', dirs: [tcl_dep.get_variable('libdir')])
endif

# threadUuid.h is generated by upstream's Makefile from manifest.uuid;
# generic/threadCmd.c does `#include "threadUuid.h"`.  Same pattern as
# tclUuid.h in the tcl wrap.  Upstream's win/threadUuid.h.in is a
# different shape (no @UUID@ placeholder — the makefile concatenates
# manifest.uuid onto it), so we ship our own minimal template in the
# overlay.
manifest_uuid = fs.read('manifest.uuid').strip()
uuid_conf     = configuration_data()
uuid_conf.set('UUID', manifest_uuid)
thread_uuid_h = configure_file(
  input:          'threadUuid.h.in',
  output:         'threadUuid.h',
  configuration:  uuid_conf,
)

inc = [include_directories('generic'), include_directories('.')]

pkg_dir_basename = meson.project_name() + meson.project_version()
install_pkg_dir  = (tcl_dep.type_name() == 'internal'
  ? 'lib' / pkg_dir_basename
  : tcl_dep.get_variable('libdir') / pkg_dir_basename)

pkg_so = shared_library(
  lib_basename9,
  [generic_sources, platform_sources, thread_uuid_h],
  include_directories:    inc,
  c_args:                 c_args,
  dependencies:           deps,
  name_prefix:            host_machine.system() == 'windows' ? '' : 'lib',
  gnu_symbol_visibility:  'default',
  install:                true,
  install_dir:            install_pkg_dir,
  install_tag:            meson.is_subproject() ? 'deps' : 'runtime',
)

# pkgIndex.tcl: configure with the lib filename Tcl 9 expects.  The
# upstream template references both PKG_LIB_FILE8 and PKG_LIB_FILE9;
# only the matching branch fires at runtime based on `package vsatisfies`.
pkgindex_conf = configuration_data()
pkgindex_conf.set('PACKAGE_NAME',    meson.project_name())
pkgindex_conf.set('PACKAGE_VERSION', meson.project_version())
pkgindex_conf.set('PKG_LIB_FILE9',   'lib' + lib_basename9 + '.so')
pkgindex_conf.set('PKG_LIB_FILE8',   'lib' + lib_basename8 + '.so')

configure_file(
  input:          'pkgIndex.tcl.in',
  output:         'pkgIndex.tcl',
  configuration:  pkgindex_conf,
  install:        true,
  install_dir:    install_pkg_dir,
  install_tag:    meson.is_subproject() ? 'deps' : 'runtime',
)

# pkg-config metadata.  Same convention as the other Tcl-extension
# wraps: tcl_pkg_path lets downstream consumers locate the install via
# `pkg-config --variable=tcl_pkg_path Thread`.
pc_conf = configuration_data()
pc_conf.set('PACKAGE_NAME',     'Thread')
pc_conf.set('PACKAGE_VERSION',  meson.project_version())
pc_conf.set('PKG_DIR_BASENAME', pkg_dir_basename)
configure_file(
  input:          'thread.pc.in',
  output:         'thread.pc',
  configuration:  pc_conf,
  install:        true,
  install_dir:    tcl_dep.get_variable('libdir') / 'pkgconfig',
  install_tag:    meson.is_subproject() ? 'deps' : 'runtime',
)

# Override-dependency for meson subproject consumers.  Variable
# `tcl_pkg_path` mirrors the convention used by other Tcl extension
# wraps in this tree — points at the directory holding the shared lib
# + pkgIndex.tcl (i.e. the build dir while building, the install
# pkg_dir after install).
thread_dep = declare_dependency(
  variables: {
    'tcl_pkg_path': fs.parent(pkg_so.full_path()),
    'version':      meson.project_version(),
  },
)
meson.override_dependency('Thread', thread_dep)

# Devenv so `meson devenv -C <builddir> tclsh` picks Thread up.
devenv = environment()
devenv.prepend('TCLLIBPATH', fs.parent(pkg_so.full_path()), separator: ' ')
meson.add_devenv(devenv)

# vim: foldmethod=marker foldmarker=<<<,>>> shiftwidth=2 expandtab
